<resources>
    <string name="app_name">TimeTracking</string>
    <string name="end">Конец</string>
    <string name="beginning">Начало</string>
    <string name="Title">Название</string>
    <string name="description">Описание</string>
    <string name="place">Место</string>
    <string name="notification">Уведомление</string>
    <string name="category">Категория</string>
    <string name="name_timeteble">Название</string>
    <string name="buttonCreate">Create</string>
    <string name="checkBoxTaskTodo">TODO</string>
    <string name="checkBoxTaskDone">DONE</string>

    <string name="notification_channel_id" translatable="false">egg_channel</string>
    <string name="notification_channel_name" translatable="true">Egg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="byDate">By date</string>
    <string name="all">All</string>
    <string name="todo">Todo</string>
    <string name="done">Done</string>
    <string name="today">Today</string>
    <string name="dayOrNight">Day or Night</string>
    <string name="notification_title">Time Tracking</string>
    <string name="defaultTime">5</string>
    <string name="min">мин. до</string>
    <string name="hour">ч.</string>
    <string name="day">дн.</string>
    <string name="ok">OK</string>
    <string name="week">нед.</string>
    <string name="add">Добавить</string>
    <string name="upload">Upload</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="delete_attach">Удалить</string>
    <string name="save_me">Save me</string>
    <string name="sign_in">Sign In</string>
    <string name="NO_CONNECTION_ERROR_MESSAGE">No network connection.</string>
</resources>
