<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <EditText
        android:id="@+id/editTextNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/defaultTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNum">

        <RadioButton
            android:id="@+id/radioButtonMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min" />

        <RadioButton
            android:id="@+id/radioButtonHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <RadioButton
            android:id="@+id/radioButtonDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day" />

        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/week" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>